src/test/deca/context/invalid/resultats/test_inexistent_type-cont.res
./src/test/deca/context/invalid/test_inexistent_type.deca:10:1: The type inexistentType doesn't exist
